# cs3219-ay2526s1-project-g11

./: .gitignore  CONTAINERIZATION_DEPLOYMENT.md  MATCHING_SERVICE_DESIGN.md  README.md
.github/workflows/: ai-service.yml  collab-service.yml  elixir.yml  frontend-vercel.yml  matching-service.yml  question-service.yml  react-web.yml  user-service.yml
ai/: usage-log.md
backend/ai-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/ai-service/.devcontainer/: devcontainer.json
backend/ai-service/app/: main.py
backend/ai-service/docs/: quickstart.md
backend/collab-service/: .gitignore  Dockerfile  README.md  collab_client.html  collab_test.html  mix.exs  test2.html  tmp.txt
backend/matching-service/: .env example  Dockerfile  constants.go  docker-compose.yml  go.mod  go.sum  redisservice.go  server.go
backend/question-service/: Dockerfile  README.md  deploy.sh  docker-compose.yml  docker_compose.yml  init-db.sh  package-lock.json  package.json  tmp.txt
backend/user-service/: .env.sample  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  server.js
frontend/: .env.example  README.md  biome.json  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/.husky/: pre-commit
frontend/scripts/: setup.sh
frontend/src/: env.d.ts  main.tsx  types.d.ts  urls.ts  utils.ts
kubernetes/: ingress.yaml  secrets-dev.yaml
kubernetes/collab-service/: collab-service-deployment.yaml  collab-service.yaml
kubernetes/matching-service/: matching-service-deployment.yaml  (+1 more)
(+112 files in other folders)
