[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.38.0",
    "ruff>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
